Fix images getting wider than the screen on mobile

--- a/docs/_sass/_layout.scss
+++ b/docs/_sass/_layout.scss
@@ -78,4 +78,5 @@ p > img {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    max-width: 100%;
 }
